Reorganise into pages. Add homepage. Update styles.

--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,5 @@
     <meta name="viewport" content="width=device-width,initial-scale=1" />
     <script defer="defer" src="bundle.js"></script>
   </head>
-  <body>
-    <section id="index"></section>
-  </body>
+  <body id="index"/>
 </html>
